# work-at-olist

./: .hgignore  .hgtags  .travis.yml  Makefile  Pipfile  Procfile  README.rst  config.py  olist.py  pyproject.toml  readme-heroku.txt
app/: __init__.py  mixins.py  models.py
app/api/: __init__.py  apispec.py  calls.py  schemas.py
app/main/: __init__.py  views.py
migrations/versions/: fb51c9d708be_.py
tests/: conftest.py  test_crudmixin.py  test_main.py
tests/api/: test_calls.py
