[tool.poetry]
name = "olist"
version = "0.1.0"
description = "Olist's Technical Challenge"
authors = ["André Felipe Dias <andre.dias@pronus.io>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
flask-sqlalchemy = "^2.3"
flask-migrate = "^2.3"
python-dotenv = "^0.9.1"
marshmallow-sqlalchemy = "^0.15.0"
flask-marshmallow = "^0.9.0"
marshmallow = {version = "^2.16",allows-prereleases = true}
sqlalchemy-utils = "^0.33.6"
apispec = "^0.39.0"
flasgger = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^3.10"
pytest-cov = "^2.6"
pytest-flask = "^0.14.0"
flake8 = "^3.6"
pep8-naming = "^0.7.0"
flask-shell-ipython = "^0.3.1"
coveralls = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
